    New experience multiplier labeled 'Eggs' in experience.yml with a default value of 0 (previously mobs from eggs were using the Mobspawner experience multiplier)
    New experience multiplier labeled 'Nether_Portal' in experience.yml with a default value of 0
    New experience multiplier labeled 'Player_Tamed' in experience.yml with a default value of 0

    Fixed a bug where mobs from eggs were only tracked if it was dispensed (egg tracking now tracks from egg items as well)
    Fixed a bug where egg spawned mobs were sometimes not marked as being from an egg (used in experience multipliers)
    Fixed a bug where entities transformed by a single event (such as lightning) weren't tracked properly if there was more than one entity involved
    mmodebug now prints out some information about final damage when attacking an entity with certain weapons

    (1.14+ required)
        Mobs spawned from mob spawners are tracked persistently and are no longer forgotten about after a restart
        Tamed mobs are tracked persistently and are no longer forgotten about after a restart
        Egg spawned mobs are tracked persistently and are no longer forgotten about after a restart
        Nether Portal spawned mobs are tracked persistently and are no longer forgotten about after a restart
        Endermen who target endermite are tracked persistently and are no longer forgotten about after a restart
        COTW spawned mobs are tracked persistently and are no longer forgotten about after a restart
        Player bred mobs are tracked persistently and are no longer forgotten about after a restart
        Player tamed mobs are tracked persistently and are no longer forgotten about after a restart

    NOTES:
    Egg mobs & Nether portal pigs being assigned to the mobspawner xp multiplier didn't make sense to me, so it has been changed. They have their own XP multipliers now.